--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,4 @@
-<p>map works!</p>
+<div echarts  [options]="mapOption"  style="width:80%;height:800px;"></div>
+
+<div echarts  [options]="chartOption"  style="width:600px;height:400px;"></div>
+
