--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,5 @@
-<div echarts  [options]="mapOption"  style="width:80%;height:800px;"></div>
 
-<div echarts  [options]="chartOption"  style="width:600px;height:400px;"></div>
+<div echarts  [options]="mapOption"  style="width:100%;height:800px;"></div>
+
+<!-- <div echarts  [options]="chartOption"  style="width:600px;height:400px;"></div> -->
 
